Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-92827

UpdateModification::parseFromOplogEntry does not handle $v values outside 32-bit integer range

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Minor - P4 Minor - P4
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • v8.0, v7.0, v6.0, v5.0
    • Execution Team 2024-08-05
    • 0

      The UpdateModification::parseFromOplogEntry function checks the the value of the $v field in the oplog entry is 2. However, since it uses BSONElement::numberInt to get the value from BSON, it does not properly handle the case where the value is numeric but outside the range of a 32-bit integer.

            Assignee:
            gregory.noma@mongodb.com Gregory Noma
            Reporter:
            gregory.noma@mongodb.com Gregory Noma
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: