SERVER-92827 Handle large numeric values for `$v` when parsing update from oplog entry (#25307)

GitOrigin-RevId: e3797288811ad4b762a53ac0c913de611abde980